Ajuste na criação de benefícios
